--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,16 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "laravel/framework": "5.4.*",
-    "flow/jsonpath": "^0.2.4",
-    "fzaninotto/faker": "~1.4"
+    "laravel/framework": "^5.7",
+    "flow/jsonpath": "^0.4.0",
+    "fzaninotto/faker": "^1.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0",
-    "phpspec/phpspec": "~2.1",
-    "codeception/codeception": "2.2.x-dev",
-    "symfony/dom-crawler": "~3.0",
-    "symfony/css-selector": "~3.0"
+    "phpunit/phpunit": "^7.4",
+    "phpspec/phpspec": "^5.0",
+    "codeception/codeception": "^2.5",
+    "symfony/dom-crawler": "^4.1",
+    "symfony/css-selector": "^4.1"
   },
   "autoload": {
     "classmap": [
@@ -24,8 +24,7 @@
       "App\\": "app/"
     }
   },
-  "autoload-dev": {
-  },
+  "autoload-dev": {},
   "scripts": {
     "post-install-cmd": [
       "php artisan clear-compiled",
