--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "phpspec/phpspec": "^5.0",
     "codeception/codeception": "^2.5",
     "symfony/dom-crawler": "^4.1",
-    "symfony/css-selector": "^4.1"
+    "symfony/css-selector": "^4.1",
+    "barryvdh/laravel-debugbar": "^3.2"
   },
   "autoload": {
     "classmap": [
