--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
   "require": {
     "laravel/framework": "^5.7",
     "flow/jsonpath": "^0.4.0",
-    "fzaninotto/faker": "^1.8"
+    "fzaninotto/faker": "^1.8",
+    "symfony/config": "^4.1",
+    "symfony/dependency-injection": "^4.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.4",
