--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,12 @@
   "autoload-dev": {},
   "scripts": {
     "post-install-cmd": [
+      "php artisan config:clear",
       "php artisan clear-compiled",
       "php artisan optimize"
     ],
     "post-update-cmd": [
+      "php artisan config:clear",
       "php artisan clear-compiled",
       "php artisan optimize"
     ],
