--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -11,6 +11,7 @@ stages:
         ./composer.phar install -n --prefer-dist
         touch storage/testing.sqlite storage/database.sqlite
         cp .env.testing .env
+        php artisan config:clear
         php artisan migrate
         php artisan migrate --env=testing --database=sqlite_testing --force
         ./vendor/bin/codecept build
